--- a/udagram/udagram-api/tsconfig.json
+++ b/udagram/udagram-api/tsconfig.json
@@ -29,6 +29,7 @@
     // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
     // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
+    "skipLibCheck": true,
 
     /* Additional Checks */
     // "noUnusedLocals": true,                /* Report errors on unused locals. */
@@ -61,7 +62,7 @@
     "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-    "include": [
-        "src/**/*"
-    ]
+  "include": [
+    "src/**/*"
+  ] 
 }
